backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: bootcampt
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
