prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: observability
  annotations:
    cert-manager.io/cluster-issuer: bootcampt-issuer
spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - prometheus.obianuju-tech.online
    secretName: prometheus-tls

  rules:
  - host: prometheus.obianuju-tech.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-kube-prome-prometheus
            port:
              number: 9090
